# elos_demo

./: .gitignore  CMakeLists.txt  README.md  init.sh  start.sh
brakes/: CMakeLists.txt  Makefile  events.json  main.cpp  source.json
common/: common.cpp  includes.hpp
computer/: CMakeLists.txt  Makefile  events.json  main.cpp  source.json
interface/: CMakeLists.txt  Makefile  events.json  main.cpp  source.json
oil_thermometer/: CMakeLists.txt  Makefile  events.json  main.cpp  source.json
speed_sensor/: CMakeLists.txt  Makefile  events.json  main.cpp  source.json
